--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Faustina:wght@400;700&family=Heebo:wght@400;700&family=Tajawal:wght@400;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Tajawal', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,6 +19,10 @@ a {
   text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Faustina', serif;
+}
+
 .currency-type-tag {
   display: inline-block;
   width: 25px;
@@ -30,8 +36,24 @@ a {
   border-radius: 50%;
 }
 
+.ctp-stats-table th {
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #6c757d;
+}
+
 .ctp-stats-table td {
   vertical-align: middle;
+  padding: 20px 0;
+}
+
+.ctp-stats-table .currency-logo {
+  margin-right: 5px;
+}
+
+.ctp-stats-table .currency-name {
+  color: #000000;
+  font-weight: bold;
 }
 
 .currency-price-details {
