--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Faustina', serif;
 }
 
+.compact {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 .currency-type-tag {
   display: inline-block;
   width: 25px;
