--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,21 @@
   src: local(HoeflerText), url("./fonts/hoefler-text-black.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: Satoshi;
+  src: local(Satoshi), url("./fonts/Satoshi-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: SatoshiBold;
+  src: local(SatoshiBold), url("./fonts/Satoshi-Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: SatoshiBlack;
+  src: local(SatoshiBlack), url("./fonts/Satoshi-Black.otf") format("opentype");
+}
+
 .ff-sf-pro {
   font-family: SFProDisplay;
 }
@@ -31,14 +46,24 @@
 .ff-hoefler-black {
   font-family: HoeflerTextBlack;
 }
+.ff-satoshi {
+  font-family: Satoshi;
+}
+.ff-satoshi-bold {
+  font-family: SatoshiBold;
+}
+.ff-satoshi-black {
+  font-family: SatoshiBlack;
+}
 
 body {
   margin: 0;
-  font-family: SFProDisplay, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Satoshi, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
 }
 
 code {
@@ -52,7 +77,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* font-family: 'Roboto', serif; */
+  font-family: SatoshiBold;
 }
 
 .fw-bolder {
@@ -62,6 +87,10 @@ h1, h2, h3, h4, h5, h6 {
 .compact {
   max-width: 900px;
   margin: 0 auto;
+}
+
+.main-index {
+  font-size: 60px;
 }
 
 .currency-type-tag {
@@ -106,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 .currency-price-percent {
   font-size: 1.2rem;
@@ -158,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .navbar-brand h2 {
   margin-bottom: 0px;
-  font-size: 36px;
+  font-size: 44px;
   
 }
 .navbar-brand h2 span {
@@ -169,4 +198,13 @@ h1, h2, h3, h4, h5, h6 {
   text-shadow: -1px 0px 0px #A9A9A9, 1px 0px 0px #A9A9A9, 0px -1px 0px #A9A9A9, 0px 1px 0px #A9A9A9;
   color: #E8E8E8;
   margin-left: 3px;
+}
+.navbar-brand {
+  position: relative;
+}
+.logo-notification {
+  position: absolute;
+  left: 0px;
+  bottom: -15px;
+  font-size: 16px;
 }
