--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+
+/* Additional styles */
+@import 'additional-styles/utility-patterns.css';
+
+@tailwind utilities;
+
 /* @import url('https://fonts.googleapis.com/css2?family=Faustina:wght@400;700&family=Heebo:wght@400;700&family=Tajawal:wght@400;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,700&display=swap');
 
@@ -230,7 +238,7 @@ h1, h2, h3, h4, h5, h6 {
 /* About */
 .about-banner {
   position: relative;
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/skyscrapers-construction.jpg');
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/skyscrapers-construction.jpg');
   min-height: 400px;
   background-position: center;
   background-size: cover;
